--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TableLayout
+        android:layout_marginStart="15sp"
+        android:layout_marginEnd="15sp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="60dp">
+        <TableRow
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <TableRow
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="5dp">
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="@string/expediente"
+                android:textAllCaps="false"
+                android:layout_weight="1"
+                android:background="@drawable/button_style"
+                android:textColor="@color/colorText"
+                android:layout_marginEnd="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="@string/citas"
+                android:textAllCaps="false"
+                android:layout_weight="1"
+                android:background="@drawable/button_style"
+                android:textColor="@color/colorText"
+                android:layout_marginStart="5dp"
+                />
+        </TableRow>
+        <TableRow
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp">
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="@string/historial"
+                android:textAllCaps="false"
+                android:layout_weight="1"
+                android:background="@drawable/button_style"
+                android:textColor="@color/colorText"
+                android:layout_marginEnd="5dp"
+                />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="@string/ayuda"
+                android:textAllCaps="false"
+                android:layout_marginStart="5sp"
+                android:layout_weight="1"
+                android:background="@drawable/button_style"
+                android:textColor="@color/colorText"
+                android:layout_marginEnd="5dp"
+                />
+        </TableRow>
+        <TableRow
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+    </TableLayout>
 
 </android.support.constraint.ConstraintLayout>
