--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:layout_weight="1"
             android:layout_marginBottom="5dp">
             <Button
+                android:id="@+id/btnExpediente"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="@string/expediente"
@@ -37,6 +38,7 @@
                 android:layout_marginEnd="5dp"
                 />
             <Button
+                android:id="@+id/btnCita"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="@string/citas"
@@ -52,6 +54,7 @@
             android:layout_weight="1"
             android:layout_marginTop="5dp">
             <Button
+                android:id="@+id/btnHistorial"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="@string/historial"
@@ -62,6 +65,7 @@
                 android:layout_marginEnd="5dp"
                 />
             <Button
+                android:id="@+id/btnAyuda"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="@string/ayuda"
