Pantallas de citas e historial

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#30557E</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorSecundary">#686868</color>
     <color name="colorAccent">#CDE7FA</color>
     <color name="colorText">#FFF</color>
 </resources>
