--- a/app/src/main/res/layout/activity_citas_doctor.xml
+++ b/app/src/main/res/layout/activity_citas_doctor.xml
@@ -14,20 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"/>
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="395dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:background="?android:attr/listDivider"
-        android:backgroundTint="@color/colorPrimaryDark"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
-
     <EditText
         android:id="@+id/editText7"
         android:layout_width="wrap_content"
@@ -45,7 +31,43 @@
         android:layout_width="238dp"
         android:layout_height="35dp"
         android:layout_marginTop="32dp"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/editText7"
         app:layout_constraintTop_toBottomOf="@+id/editText7" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="395dp"
+        android:layout_height="3dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="?android:attr/listDivider"
+        android:foreground="@color/colorPrimaryDark"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+
+    <EditText
+        android:id="@+id/editText8"
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        app:layout_constraintStart_toStartOf="@+id/spinner2"
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
+
+    <Button
+        android:id="@+id/searchBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:backgroundTint="@color/colorText"
+        android:drawableStart="@drawable/search"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText8"
+        app:layout_constraintStart_toEndOf="@+id/editText8" />
 
 </android.support.constraint.ConstraintLayout>
