--- a/app/src/main/res/layout/activity_citas_hospital.xml
+++ b/app/src/main/res/layout/activity_citas_hospital.xml
@@ -88,7 +88,7 @@
                 android:layout_weight="8"/>
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btnSelectHospital"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorPrimary"
