--- a/app/src/main/res/layout/layout_doctor_list.xml
+++ b/app/src/main/res/layout/layout_doctor_list.xml
@@ -4,27 +4,31 @@
     android:padding="5dp">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="15dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:descendantFocusability="afterDescendants"
+        android:orientation="horizontal"
         android:paddingTop="0dp"
-        android:paddingBottom="5dp"
-        android:paddingRight="15dp"
-        android:descendantFocusability="afterDescendants">
+        android:paddingBottom="5dp">
 
         <ImageView
             android:id="@+id/thumbnail_image"
             android:layout_width="91dp"
             android:layout_height="93dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginEnd="10dp" />
 
         <LinearLayout
-            android:layout_width="116dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
+            android:gravity="center_vertical"
             android:orientation="vertical"
-            android:gravity="center_vertical" >
+            android:maxWidth="128dp">
 
             <TextView
                 android:id="@+id/doctorCita"
@@ -48,10 +52,11 @@
             android:id="@+id/btnSelectDoctor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center|center_horizontal"
+            android:layout_marginEnd="5dp"
+            android:minWidth="104dp"
             android:text="@string/select"
-            android:textSize="8sp"
-            android:layout_marginStart="20sp"
-            android:layout_gravity="center|center_horizontal"/>
+            android:textSize="12sp" />
 
     </LinearLayout>
 </RelativeLayout>
