--- a/app/src/main/res/layout/activity_citas_doctor.xml
+++ b/app/src/main/res/layout/activity_citas_doctor.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="01/01/2019"
         android:inputType="date"
@@ -30,7 +30,7 @@
         android:id="@+id/spinner2"
         android:layout_width="238dp"
         android:layout_height="35dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/editText7"
         app:layout_constraintTop_toBottomOf="@+id/editText7" />
@@ -40,7 +40,7 @@
         android:layout_width="395dp"
         android:layout_height="3dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:background="?android:attr/listDivider"
         android:foreground="@color/colorPrimaryDark"
@@ -53,7 +53,7 @@
         android:id="@+id/editText8"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
@@ -69,5 +69,34 @@
         android:drawableStart="@drawable/search"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText8"
         app:layout_constraintStart_toEndOf="@+id/editText8" />
+
+    <ListView
+        android:id="@+id/doctorCitaList"
+        android:layout_width="351dp"
+        android:layout_height="281dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText8"></ListView>
+
+    <Button
+        android:id="@+id/btnSelectDoctor"
+        android:layout_width="130dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/select"
+        android:textColor="@color/colorText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doctorCitaList"
+        app:layout_constraintVertical_bias="0.342" />
+
 
 </android.support.constraint.ConstraintLayout>
