--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,85 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:fitsSystemWindows="true">
+    tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/thumbnail_image"
+        android:layout_width="91dp"
+        android:layout_height="93dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="220dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
-    <include
-        layout="@layout/custom_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"/>
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="24dp"
+        android:text="@string/app_name"
+        android:textColor="@color/colorPrimary"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/thumbnail_image"
+        app:layout_constraintStart_toEndOf="@+id/thumbnail_image" />
 
-    <TableLayout
-        android:layout_marginStart="15sp"
-        android:layout_marginEnd="15sp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
-        android:layout_marginBottom="80dp">
-        <TableRow
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TableRow
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginBottom="5dp">
-            <Button
-                android:id="@+id/btnExpediente"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="@string/expediente"
-                android:textAllCaps="false"
-                android:layout_weight="1"
-                android:background="@drawable/button_style"
-                android:textColor="@color/colorText"
-                android:layout_marginEnd="5dp"
-                />
-            <Button
-                android:id="@+id/btnCita"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="@string/citas"
-                android:textAllCaps="false"
-                android:layout_weight="1"
-                android:background="@drawable/button_style"
-                android:textColor="@color/colorText"
-                android:layout_marginStart="5dp"
-                />
-        </TableRow>
-        <TableRow
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="5dp">
-            <Button
-                android:id="@+id/btnHistorial"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="@string/historial"
-                android:textAllCaps="false"
-                android:layout_weight="1"
-                android:background="@drawable/button_style"
-                android:textColor="@color/colorText"
-                android:layout_marginEnd="5dp"
-                />
-            <Button
-                android:id="@+id/btnAyuda"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:text="@string/ayuda"
-                android:textAllCaps="false"
-                android:layout_marginStart="5sp"
-                android:layout_weight="1"
-                android:background="@drawable/button_style"
-                android:textColor="@color/colorText"
-                android:layout_marginEnd="5dp"
-                />
-        </TableRow>
-        <TableRow
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-    </TableLayout>
+    <Button
+        android:id="@+id/btnLoginMain"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/colorPrimary"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="@string/login"
+        android:textColor="@color/colorText"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <Button
+        android:id="@+id/btnSingupMain"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/colorPrimary"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:text="@string/signup"
+        android:textColor="@color/colorText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginMain" />
 
 </android.support.constraint.ConstraintLayout>
