--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,14 +47,14 @@
         app:layout_constraintVertical_bias="0.745" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/btnBackLogin"
         android:layout_width="55dp"
         android:layout_height="39dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:onClick="atras"
-        app:layout_constraintBottom_toTopOf="@+id/mailText"
-        app:layout_constraintEnd_toStartOf="@+id/mailText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?attr/actionModeCloseDrawable" />
 
 </android.support.constraint.ConstraintLayout>
