--- a/app/src/main/res/layout/layout_doctor_list.xml
+++ b/app/src/main/res/layout/layout_doctor_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="5dp">
 
@@ -20,7 +21,9 @@
             android:layout_width="91dp"
             android:layout_height="93dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="10dp" />
+            android:layout_marginEnd="10dp"
+            android:background="@color/colorAccent"
+            app:srcCompat="@drawable/person" />
 
         <LinearLayout
             android:layout_width="wrap_content"
