--- a/app/src/main/res/layout/activity_citas_hospital.xml
+++ b/app/src/main/res/layout/activity_citas_hospital.xml
@@ -67,7 +67,7 @@
                 android:layout_weight="8"/>
 
             <Spinner
-                android:id="@+id/spinner"
+                android:id="@+id/spnHospital"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
