--- a/app/src/main/res/layout/activity_expediente.xml
+++ b/app/src/main/res/layout/activity_expediente.xml
@@ -139,7 +139,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textBloodExp" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/textAlergiasExp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -158,7 +158,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/textAlergiasExp" />
 
     <TextView
         android:id="@+id/textNameContactExp"
@@ -167,7 +167,7 @@
         android:layout_marginTop="20dp"
         android:text="TextView"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/textView12"
+        app:layout_constraintStart_toStartOf="@+id/textAlergiasExp"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <TextView
