--- a/app/src/main/res/layout/activity_historial_med.xml
+++ b/app/src/main/res/layout/activity_historial_med.xml
@@ -14,6 +14,7 @@
         android:layout_height="60dp"/>
 
     <TableLayout
+        android:id="@+id/tabla"
         android:layout_width="395dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
